// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Author Profile test Render the authors profile as expected for a UQ researcher) 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(Grid))
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName="Researcher"
            givenName="J"
            orgUnits={
              Array [
                "Institute for Molecular Bioscience",
                "Institute for Molecular Bioscience",
                "School of Chemistry and Molecular Biosciences",
                "The University of Queensland Diamantina Institute",
              ]
            }
            positions={
              Array [
                "Affiliate Professor",
                "Casual Affiliate Professor",
                "Affiliate Professorial Res Fellow",
                "ARC Australian Laureate Fellow",
              ]
            }
            title="Professor"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": true,
                "orcid": true,
                "publons": false,
                "researcher": true,
                "scopus": true,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": "kUemDfMAAAAJ",
                "orcid": "0000-0001-1111-1111",
                "publons": null,
                "researcher": "A-1137-2007",
                "scopus": "35478294000",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Connect(WithStyles(DashboardArticleCount)) />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Dashboard Author Profile test Render the authors profile with publon id url constructed using ORCID id if publons id is 1 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(Grid))
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName="Researcher"
            givenName="J"
            orgUnits={
              Array [
                "Institute for Molecular Bioscience",
                "Institute for Molecular Bioscience",
                "School of Chemistry and Molecular Biosciences",
                "The University of Queensland Diamantina Institute",
              ]
            }
            positions={
              Array [
                "Affiliate Professor",
                "Casual Affiliate Professor",
                "Affiliate Professorial Res Fellow",
                "ARC Australian Laureate Fellow",
              ]
            }
            title="Professor"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": true,
                "orcid": true,
                "publons": true,
                "researcher": true,
                "scopus": true,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": "kUemDfMAAAAJ",
                "orcid": "0000-0001-1111-1111",
                "publons": "0000-0001-1111-1111",
                "researcher": "A-1137-2007",
                "scopus": "35478294000",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Connect(WithStyles(DashboardArticleCount)) />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Dashboard Author Profile test Render the authors profile with publon id url constructed using ORCID id if publons id is integer 1 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(Grid))
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName="Researcher"
            givenName="J"
            orgUnits={
              Array [
                "Institute for Molecular Bioscience",
                "Institute for Molecular Bioscience",
                "School of Chemistry and Molecular Biosciences",
                "The University of Queensland Diamantina Institute",
              ]
            }
            positions={
              Array [
                "Affiliate Professor",
                "Casual Affiliate Professor",
                "Affiliate Professorial Res Fellow",
                "ARC Australian Laureate Fellow",
              ]
            }
            title="Professor"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": true,
                "orcid": true,
                "publons": true,
                "researcher": true,
                "scopus": true,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": "kUemDfMAAAAJ",
                "orcid": "0000-0001-1111-1111",
                "publons": "0000-0001-1111-1111",
                "researcher": "A-1137-2007",
                "scopus": "35478294000",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Connect(WithStyles(DashboardArticleCount)) />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Dashboard Author Profile test Render the authors profile with publon id url constructed using ORCID id if publons id is string 0 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(Grid))
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName="Researcher"
            givenName="J"
            orgUnits={
              Array [
                "Institute for Molecular Bioscience",
                "Institute for Molecular Bioscience",
                "School of Chemistry and Molecular Biosciences",
                "The University of Queensland Diamantina Institute",
              ]
            }
            positions={
              Array [
                "Affiliate Professor",
                "Casual Affiliate Professor",
                "Affiliate Professorial Res Fellow",
                "ARC Australian Laureate Fellow",
              ]
            }
            title="Professor"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": true,
                "orcid": true,
                "publons": true,
                "researcher": true,
                "scopus": true,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": "kUemDfMAAAAJ",
                "orcid": "0000-0001-1111-1111",
                "publons": "0",
                "researcher": "A-1137-2007",
                "scopus": "35478294000",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Connect(WithStyles(DashboardArticleCount)) />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Dashboard Author Profile test Render the authors profile with publon id url constructed using publons id if publons id is not 1 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(Grid))
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "Researcher",
            "givenName": "J",
            "title": "Professor",
            "uqr_id": 14,
          }
        }
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName="Researcher"
            givenName="J"
            orgUnits={
              Array [
                "Institute for Molecular Bioscience",
                "Institute for Molecular Bioscience",
                "School of Chemistry and Molecular Biosciences",
                "The University of Queensland Diamantina Institute",
              ]
            }
            positions={
              Array [
                "Affiliate Professor",
                "Casual Affiliate Professor",
                "Affiliate Professorial Res Fellow",
                "ARC Australian Laureate Fellow",
              ]
            }
            title="Professor"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": true,
                "orcid": true,
                "publons": true,
                "researcher": true,
                "scopus": true,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": "kUemDfMAAAAJ",
                "orcid": "0000-0001-1111-1111",
                "publons": "1111-2222-3333-4444",
                "researcher": "A-1137-2007",
                "scopus": "35478294000",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Connect(WithStyles(DashboardArticleCount)) />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile but profile image exists 1`] = `
<WithStyles(ForwardRef(Card))>
  <WithStyles(ForwardRef(Grid))
    alignContent="center"
    alignItems="center"
    container={true}
    justifyContent="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs="auto"
    >
      <DashboardAuthorAvatar
        values={
          Object {
            "familyName": "",
            "givenName": "",
            "title": "",
            "uqr_id": "",
          }
        }
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(Grid))
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardAuthorDetails)
            familyName=""
            givenName=""
            title=""
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          item={true}
          xs={12}
        >
          <WithStyles(DashboardResearcherIdsClass)
            authenticated={
              Object {
                "google_scholar": false,
                "orcid": false,
                "publons": false,
                "researcher": false,
                "scopus": false,
              }
            }
            history={Object {}}
            values={
              Object {
                "google_scholar": undefined,
                "orcid": undefined,
                "publons": undefined,
                "researcher": undefined,
                "scopus": "",
              }
            }
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <Hidden
      smDown={true}
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs="auto"
      >
        <Connect(WithStyles(DashboardArticleCount)) />
      </WithStyles(ForwardRef(Grid))>
    </Hidden>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Card))>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile loaded 1`] = `
<div
  className="AuthorProfile empty"
/>
`;
